fix borders on iOS and Safari

--- a/app/assets/stylesheets/views/_covid.scss
+++ b/app/assets/stylesheets/views/_covid.scss
@@ -124,6 +124,7 @@
   background-color: $covid-grey;
   padding: govuk-spacing(6) govuk-spacing(5);
   border-left: 10px solid $covid-yellow;
+  border-width: 0 0 0 10px;
   border-image: repeating-linear-gradient(25deg, transparent 0, $covid-yellow 1px, $covid-yellow 10px, transparent 11px, transparent 20px) 25;
 }
 
